# AutoOS

./: .gitignore  GATEWAY_INSTRUCTIONS.md  OS_COMPREHENSIVE_PLAN.md  OS_Features.md  PLAN.md  README.md  Role1_FileSystem_Vision.md  Role2_Hardware_Automation.md  Role3_OS_Intelligence.md  browser-use_docs.txt  code_rabbit_review.txt  start.bat  start.ps1
app/: index.html  package-lock.json  (+4 more)
server/: .env.example  @AutomationLog.txt  db.py  main.py  pyproject.toml  requirements.txt
server/agent/: bus.py  graph.py  llm_factory.py  shared_state.py  skills.py  state.py
server/agent/modules/: __init__.py  app_module.py  browser_helper.py  diag_module.py  diagnostic_module.py  file_module.py  hardware_module.py  health_module.py  maintenance_module.py  process_module.py  security_module.py  settings_module.py  tutorial_module.py  visual_module.py  whatsapp_module.py  window_module.py
server/agent/nodes/: evaluator.py  executor.py  hitl_gate.py  logger.py  memory.py  planner.py  router.py
server/agent/tools/: browser_tool.py  desktop_tool.py  terminal_tool.py
server/data/: apps_cache.json
server/knowledge/: HABITS.md  MEMORY.md  skills.json
server/knowledge/threads/: chat-mootjo1k.json  chat-mootm006.json  chat-mootqpie.json  chat-mootws1f.json  chat-moou281o.json  chat-moou77o5.json  chat-mooujhxt.json  chat-mop2p055.json  chat-mop7kao6.json  new-20260503022305.json
server/knowledge/workflows/: dev.json  morning.json  wf_moouktq3.json
server/models/: execution.py  workflow.py
server/routers/: executions.py  extension.py  face_auth.py  sharing.py  voice.py  workflows.py
server/scratch/: diag_whatsapp.py
server/scripts/: benchmark_speed.py
server/voice/: speaker.py  transcribe.py
(+56 files in other folders)
