[project]
name = "server"
version = "0.1.0"
description = "AutoOS Backend Gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "fastapi>=0.136.1",
    "openai-whisper>=20250625",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "playwright>=1.49.0",
]
