[project]
name = "server"
version = "0.1.0"
description = "AutoOS Backend Gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.6",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "fastapi>=0.136.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "uvicorn>=0.46.0",
    "playwright>=1.49.0",
    "psutil>=5.9.0",
    "faster-whisper>=1.2.1",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
    "httpx>=0.28.1",
]
