[project]
name = "server"
version = "0.1.0"
description = "AutoOS Backend Gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.6",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "fastapi>=0.136.1",
    "openai-whisper>=20250625",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "playwright>=1.49.0",
    "gui-agents>=0.1.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "deepface>=0.0.99",
    "tf-keras>=2.21.0",
    "faster-whisper>=1.2.1",
]
